--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "packageManager": "yarn@1.22.19",
   "scripts": {
     "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
     "format": "prettier -w ./src",
     "generate-json": "node scripts/jsonGenerator.js",
